// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZForm demo -- base 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<form
  class="uc-fe-form "
>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="1"
    >
      input_1
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="1"
    >
      input_2
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="1"
    >
      input_3
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="1"
    >
      checkbox_1
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="1"
    >
      checkbox_2
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- name 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<form
  class="uc-fe-form "
>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      input 0
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      input 1
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      input 2
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      checkbox first
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      checkbox second
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      checkbox third
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      a.b.c.d
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      r[0][1][2][3]
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      z[0].a[1].b[2]
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- rule 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<form
  class="uc-fe-form "
>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="1"
    >
      input_1
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="1"
    >
      input_2
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="1"
    >
      input_3
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="1"
    >
      checkbox_1
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="1"
    >
      select_1
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <select>
        <option>
          请选择
        </option>
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
      </select>
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="1"
    >
      select_2
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="5"
    >
      <select>
        <option>
          请选择
        </option>
        <option
          selected=""
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
      </select>
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- uhost 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c9 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #f2f6fc;
  border-color: #c3cad9;
  color: #4683e6;
  background: #f2f6fc;
  border-color: #4683e6;
}

.c9:hover {
  color: #4683e6;
  background: #f2f6fc;
  border-color: #4683e6;
}

.c11 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #f2f6fc;
  border-color: #c3cad9;
}

.c11:hover {
  color: #4683e6;
  background: #f2f6fc;
  border-color: #4683e6;
}

.c26 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  background: #4683e6;
  border-color: #4683e6;
}

.c26:hover {
  color: #fff;
  background: #3664c8;
  border-color: #3664c8;
}

.c8.c8 {
  min-width: 50px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  z-index: 2;
}

.c8.c8:hover {
  z-index: 3;
}

.c10.c10 {
  min-width: 50px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
  cursor: pointer;
}

.c10.c10:hover {
  z-index: 3;
}

.c6 {
  position: relative;
  margin-bottom: -8px;
}

.c6 .c27,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c27:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c7 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c7:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c7:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c24 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c25 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c22 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c22 .c23 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c22 .c23:hover {
  border-color: #4683e6;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

<form
  class="uc-fe-form "
>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      地域
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="10"
    >
      <div
        class="c6"
      >
        <button
          checked=""
          class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button c8 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked c9"
          type="button"
        >
          cn-zj
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          cn-bj1
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          hk
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          cn-bj2
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          us-ca
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          cn-gd
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          cn-sh
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          cn-sh2
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          us-ws
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          ge-fra
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          th-bkk
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          kr-seoul
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          sg
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          tw-kh
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          rus-mosc
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          jpn-tky
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          tw-tp
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          uae-dubai
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          idn-jakarta
        </button>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      可用区
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="10"
    >
      <div
        class="c6"
      >
        <button
          checked=""
          class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button c8 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked c9"
          type="button"
        >
          cn-zj-01
        </button>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      系列
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="10"
    >
      <div
        class="c6"
      >
        <button
          checked=""
          class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button c8 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked c9"
          type="button"
        >
          系列1
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          系列2
        </button>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      网络增强
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="10"
    >
      <div
        class="c12"
        value="false"
      >
        <div
          class="c13 c14"
        >
          <span
            class="c15 c16"
          >
            ON
          </span>
          <span
            class="c17 c16"
          >
            OFF
          </span>
          <span
            class="c18 c19"
          >
            <span
              class="c20 c21"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-form-item c0 uc-fe-row c1"
  >
    <div
      class="uc-fe-form-label c2 c3 uc-fe-col c4"
      span="2"
    >
      镜像
    </div>
    <div
      class="uc-fe-form-controller c3 uc-fe-col c5"
      span="10"
    >
      <div
        class="c6"
      >
        <button
          checked=""
          class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button c8 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked c9"
          type="button"
        >
          标准
        </button>
        <button
          class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c10 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c11"
          type="button"
        >
          自制
        </button>
      </div>
      <div
        class="c22"
      >
        <div>
          <div
            class="c23 c24"
          >
            <div>
              请选择
            </div>
            <i
              class="c25 uc-fe-icon icon__down "
              type="down"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c26"
    type="button"
  >
    submit
  </button>
</form>
`;
